--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-body{
-    background-color: #f7f7f7;
-    padding: 20px;
+body {
+  background-color: #f7f7f7;
+  padding: 20px;
 }
 
 main h3 {
@@ -9,5 +9,18 @@ main h3 {
   color: #000;
   padding: 10px;
   border-radius: 8px;
-  box-shadow: 0 0 8px rgba(0,0,0,0.15);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+}
+
+.navbar {
+  background-color: #343a40;
+  padding: 10px 20px;
+  justify-content: center !important;
+}
+
+.navbar-brand {
+  color: #ffffff !important;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
 }
